fix list overflow

--- a/packages/keplerjs-ui/client/stylesheets/items.css
+++ b/packages/keplerjs-ui/client/stylesheets/items.css
@@ -64,8 +64,7 @@
 	box-shadow: none;
 }
 
-.list-group > .list-group-item > div {
-	height: auto;
+.list-group > .list-group-item {
 	overflow: hidden;
 }
 
